# callbackDemo

./: .gitignore  CMakeLists.txt  README.md  README.org  callbackdemo.sln
.github/workflow/: CSharp_CMake_Multiplatform.yml
.github/workflows/: CSharp_CMake_Multiplatform.yml  cmake-multi-platform.yml
c_library/: CMakeLists.txt
c_library/include/: C_Callback.h
c_library/src/: C_Callback.c
cpp_library/: CMakeLists.txt
cpp_library/include/: Cpp_Callback.h  Cpp_Callback.h~
include/: Callback.h  CallbackDemo.h  DemoClass.h
msvc/CallbackDemo/: CallbackDemo.sln
msvc/CallbackDemo/LibraryProject/: LibraryProject.vcxproj  LibraryProject.vcxproj.filters
src/: Callback.cpp  DemoClass.cpp
src/c_library/include/: C_Callback.h
src/c_library/src/: C_Callback.c
src/callbackdemo/: Program.cs
src/cpp_library/src/: Cpp_Callback.cpp
tests/: CMakeLists.txt  test_Callback.cpp
